@@ -21,8 +21,7 @@ with this program.  If not, see <http://www.gnu.org/licenses/>.
 This is based on the patch texlive-poppler-0.59.patch <2017-09-19> at
 https://git.archlinux.org/svntogit/packages.git/plain/texlive-bin/trunk
 by Arch Linux. The poppler should be 0.59.0 or newer versions.
-It is tested up to the poppler 0.70.1. The poppler 0.71.0 and newer
-ones require pdftosrc-poppler0.71.0.
+It is tested upto the poppler 0.70.1.
 POPPLER_VERSION should be defined.
 */
 
